# cinnamon-extensions

./: .gitignore  HACKING  Makefile.am  NEWS  README  autogen.sh  cinnamon-extensions.doap  configure.ac  extension.mk
debian/: changelog  cinnamon-extensions-auto-move-windows.install  cinnamon-extensions-common.dirs  cinnamon-extensions-common.examples  cinnamon-extensions-common.install  cinnamon-extensions-dock.install  cinnamon-extensions-drive-menu.install  cinnamon-extensions-places-menu.install  cinnamon-extensions-trash.install  cinnamon-extensions-windows-navigator.install  cinnamon-extensions-xrandr-indicator.install  control  control.in  copyright  rules
extensions/auto-move-windows/: Makefile.am  credits  extension.js  metadata.json.in  org.cinnamon.extensions.auto-move-windows.gschema.xml.in
extensions/dock/: Makefile.am  credits  extension.js  metadata.json.in  org.cinnamon.extensions.dock.gschema.xml.in
extensions/drive-menu/: extension.js  metadata.json.in
extensions/example/: credits  extension.js  metadata.json.in
extensions/places-menu/: credits  extension.js  metadata.json.in
extensions/trash/: Makefile.am  credits  extension.js  metadata.json.in
extensions/windowsNavigator/: credits  metadata.json.in
extensions/xrandr-indicator/: extension.js  metadata.json.in
po/: POTFILES.in  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fr.po  gl.po  he.po  hu.po  it.po  ja.po  lt.po  lv.po  nb.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sv.po  te.po  vi.po  zh_CN.po  zh_HK.po  zh_TW.po
